--- a/paper.tex
+++ b/paper.tex
@@ -60,5 +60,25 @@ This project will study how to develop a robust Augmented Reality (AR) system ba
 \end{itemize}
 
 
+\section{Motivation}
+AR and VR are two hot concept today, prevalent people also know them as VR film and AR game. I know AR because of the famous mobile game pokemon go which is showed in figure 1a. Then I find another AR app called SekaiCamera which is developed by Japanese company Tonchidot in figure 1b. It can add comments on object which is captured by your phone camera. I think AR is more useful than VR because it adds information on real scene instead of create a new scene. However, pokemon go and SekaiCamera are simple AR systems which only use 2D image and GPS. I want to develop a more robust AR system based on accurate 3D model which is provided by RGB-D SLAM system.
+
+\begin{figure}[!htp]
+		\centering
+		\begin{subfigure}{.5\textwidth}
+			\centering
+			\includegraphics[width=0.7\linewidth]{1.jpg}
+			\caption{pokemon go}
+		
+		\end{subfigure}%
+		\begin{subfigure}{.5\textwidth}
+			\centering
+			\includegraphics[width=1.2\linewidth]{2.png}
+			\caption{SekaiCamera}
+			
+		\end{subfigure}
+		\caption{AR system}
+		\label{fig:fig1}
+	\end{figure}
 
 \end{document}
