--- a/paper.tex
+++ b/paper.tex
@@ -109,4 +109,15 @@ AR and VR are two hot concept today, prevalent people also know them as VR film 
 \end{tabular}
 \end{table}
 
+
+\newpage
+\section{Timeline}
+\begin{figure}[!htp]
+\centering
+\includegraphics[height=1.1\linewidth,width=1.5\linewidth,angle=-90]{20.png}
+\caption{\label{fig:frog}Timeline}
+\end{figure}
+
+
+
 \end{document}
